# EminorBot

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: build.yml  update-flake.yml
nix/pkgs/: bot.nix
src/: deepseek.rs  handle.rs  main.rs  parser.rs
