[package]
name = "EminorBot"
version = "0.1.0"
edition = "2021"
authors = ["Emin <cchuqiming@gmail.com>"]
description = """
A simple telegram bot implemented by rust
"""

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

teloxide = { version = "0.13", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.42", features = ["full"] }
tokio-util = "*"
cron = "0.14.0"
chrono = "*"
