[package]
name = "EminorBot"
version = "0.1.0"
edition = "2021"
authors = ["Emin <cchuqiming@gmail.com>"]
description = """
A simple telegram bot implemented by rust
"""

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"

teloxide = { version = "0.17", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1.47", features = ["full"] }
tokio-util = "*"
cron = "0.15.0"
chrono = "*"

reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
